# openframe-oss-tenant

./: CLAUDE.md  CONTRIBUTING.md  README-test.md  README.md  pom.xml  renovate.json
.cursor/rules/: project-structure.mdc
.github/workflows/: build.yml  changes.yml  matrix.yml  promote.yml  release.yml  test.yml
cli/: Makefile  helm-values-example.yaml
client/chat-client/: index.html  package.json  tailwind.config.js
client/chat-client/src-tauri/: Cargo.toml  tauri.conf.json
client/chat-client/src-tauri/icons/: icon.icns
client/chat-client/src-tauri/src/: main.rs
client/src/: lib.rs
clients/openframe-chat/: Makefile  biome.json  package.json  tailwind.config.ts  vite.config.ts
clients/openframe-client/: Cargo.toml  Makefile
configs/base/: application.yml  openframe-api.yml  openframe-authorization-server.yml  openframe-client.yml  openframe-external-api.yml  openframe-gateway.yml  openframe-management.yml  openframe-stream.yml
configs/dev/: application.yml  openframe-external-api.yml  openframe-gateway.yml  openframe-stream.yml
configs/prod/: openframe-stream.yml
configs/stage/: openframe-external-api.yml  openframe-gateway.yml  openframe-management.yml
docs/: README.md
docs/architecture/: README.md
docs/deployment/: README.md
docs/development/: README.md
docs/getting-started/: first-steps.md  introduction.md  prerequisites.md  quick-start.md
docs/reference/: README.md
integrated-tools/fleetmdm/: entrypoint.sh
manifests/app-of-apps/: Chart.yaml  values-example.yaml  values.yaml
openframe-e2e-tests/: pom.xml
(+1462 files in other folders)
