[package]
name = "openframe-chat"
version = "0.1.0"
description = "OpenFrame Chat Desktop Application"
authors = ["Flamingo Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "openframe_chat_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "openframe-chat"
path = "src/main.rs"
